# BigDataBench_V5.0_BigData_MicroBenchmark

./: .gitattributes  README.md  prepar.sh
BigDataGeneratorSuite/Graph_datagen/gen_data/: Google_genGraph_10.txt  Google_parameters_10
BigDataGeneratorSuite/Graph_datagen/temp/: .sort-1.swp
BigDataGeneratorSuite/Table_datagen/e-com/: generate_table.sh
BigDataGeneratorSuite/Table_datagen/e-com/logs/: GenerationStatistics_1.csv  TableGenerationStatistics_1.csv
BigDataGeneratorSuite/Text_datagen/: gen_text_data.sh
BigDataGeneratorSuite/Text_datagen/gen_data/: datareadyuce.py
BigDataGeneratorSuite/Text_datagen/gen_data/data-SPnaivebayes/model/: part-00000
Flink/JAR_FILE/: bigdatabench-flink-0.10.0.jar.REMOVED.git-id
Flink/sort-grep-wc/: genData_MicroBenchmarks.sh  run_Microbenchmarks.sh
Hadoop/CC/: genData-cc.sh  run-cc.sh
Hadoop/FFT/: genData-fft.sh  run-fft.sh
Hadoop/FFT/fft/src/main/java/org/fft/: complex.java  fft.java  mat  mat1  mat2  process.sh
Hadoop/FFT/fft/src/main/java/org/fft/bak/: complex.java  (+3 more)
Hadoop/FFT/genData-Matrix/: change-tripleMatrix-T.sh  change-tripleMatrix.sh  data-kmeans
Hadoop/Grep/: genData-grep.sh  run-grep.sh
Hadoop/MD5/: genData-md5.sh  run-md5.sh
Hadoop/MD5/md5/: DwarfMD5.java
Hadoop/MatrixMult/: genData-matMult.sh  run-matMult.sh
Hadoop/MatrixMult/genData-Matrix/: Makefile  change-tripleMatrix  generate-matrix-float
Hadoop/Sort/: genData-sort.sh  run-terasort.sh
Hadoop/randSample/: genData-randSample.sh  run-randSample.sh
Hadoop/randSample/RandSample/: pom.xml
Hadoop/randSample/RandSample/src/main/java/: RandSample.java
Hadoop/wordcount/: .ge.sh  genData-wc.sh  run-wordcount.sh
Hive/Interactive_MicroBenchmark/: BigOP-e-commerce-aggregationAVG.sql  BigOP-e-commerce-aggregationMAX.sql  BigOP-e-commerce-aggregationMIN.sql  BigOP-e-commerce-aggregationSUM.sql  BigOP-e-commerce-crossproject.sql  BigOP-e-commerce-difference.sql  BigOP-e-commerce-filter.sql  BigOP-e-commerce-orderby.sql  BigOP-e-commerce-projection.sql  BigOP-e-commerce-union.sql  gen_data.sh  run_MicroBenchmarks.sh
Hive/Interactive_MicroBenchmark/metastore_db/: db.lck  service.properties
Hive/Interactive_Query/: e-commerce-aggregation.sql  e-commerce-join.sql  e-commerce-select.sql  gen_data.sh  run_AnalysiticWorkload.sh  run_AnalysiticWorkload.sh.bak
Hive/Interactive_Query/TempStatsStore/: service.properties
Hive/Interactive_Query/TempStatsStore/log/: logmirror.ctrl
Hive/Interactive_Query/metastore_db/: db.lck  service.properties
Hive/Interactive_Query/metastore_db/log/: log.ctrl
Impala/: conf.properties
Impala/BigDataGeneratorSuite/Table_datagen/e-com/: generate_table.sh
Impala/BigDataGeneratorSuite/Table_datagen/e-com/logs/: GenerationStatistics_1.csv  TableGenerationStatistics_1.csv
Impala/Interactive_MicroBenchmark/: aggregationAVG.sql  aggregationMAX.sql  aggregationMIN.sql  aggregationSUM.sql  crossproduct.sql  difference.sql  filter.sql  gen_data.sh  hive.sql  orderby.sql  projection.sql  run_MicroBenchmark.sh  set-aggregationMIN.sql  set-crossproduct.sql  set-difference.sql  set-projection.sql  set-union.sql  union.sql
Impala/Interactive_Query/: aggregation.sql  gen_data.sh  impala-restart.sh  join.sql  run_AnalysiticWorkload.sh  scan.sql  set-aggregation.sql  set-join.sql  set-scan.sql
MPI/: prepar.sh
MPI/BigDataGeneratorSuite/Graph_datagen/temp/: .sort.swp
MPI/BigDataGeneratorSuite/Text_datagen/: gen_random_text.cpp  pgen_random_text.cpp
MPI/BigDataGeneratorSuite/parallel_ex/: conf_hosts
MPI/MPI_Connect/: ReadMe  genData_connectedComponents.sh
MPI/MPI_Connect/parallel-bgl-0.7.0/: CMakeLists.txt  README
MPI/MPI_Connect/parallel-bgl-0.7.0/CMake/: pbgl-config.cmake.in
MPI/MPI_Connect/parallel-bgl-0.7.0/libs/graph_parallel/doc/: CMakeLists.txt  connected_components.rst  connected_components_parallel_search.rst  distributed_compressed_sparse_row.rst  fruchterman_reingold.rst  index.rst  mesh_generator.rst  mpi_bsp_process_group.rst  ssca_generator.rst  st_connected.rst  strong_components.rst
MPI/MPI_Connect/parallel-bgl-0.7.0/libs/graph_parallel/example/: CMakeLists.txt  weighted_graph-bfs.dot  weighted_graph-dijkstra.dot
MPI/MPI_Connect/parallel-bgl-0.7.0/libs/graph_parallel/src/: CMakeLists.txt  mpi_process_group.cpp
MPI/MPI_Connect/parallel-bgl-0.7.0/libs/graph_parallel/test/: CMakeLists.txt  algorithm_performance.cpp  dcsr.dot  distributed_betweenness_centrality_test.cpp  distributed_csr_ctor_test.cpp  distributed_page_rank_test.cpp  distributed_rmat_cc.cpp  ssca.cpp
MPI/MPI_Grep/: ReadMe  genData_grep.sh  makefile  mpi_grep  mpi_grep.cpp
MPI/MPI_MD5/: Makefile  genData_md5.sh  mpi-md5  mpi-md5.cpp  run-md5.sh
MPI/MPI_Sort/: ExternSort.h  genData_sort.sh  makefile  mpi_sort  mpi_sort.cpp
MPI/MPI_WordCount/: ReadMe  genData_wordcount.sh  makefile  mpi_wordcount  mpi_wordcount.cpp
MPI/mpiFFT/: Makefile  genData-fft.sh  mpiFFT.cpp  mpifft  run.sh
MPI/mpiFFT/genData-Matrix/: change-tripleMatrix  change-tripleMatrix-T  change-tripleMatrix-T.c  change-tripleMatrix.c  generate-matrix-float  generate-matrix-float.c  generate-matrix-int
MPI/mpiRandSample/: Makefile  genData_randsample.sh  mpi-randsample  mpi-randsample.cpp  run-randsample.sh
NoSQL/BasicDatastoreOperations/ycsb-0.12.0/workloads/: workloada  workloadc
Spark/CC/: genData-cc.sh  runSpark-cc.sh
Spark/FFT/: genData-fft.sh  runSpark-fft.sh
Spark/FFT/genData-Matrix/: change-tripleMatrix-T  change-tripleMatrix-T.c  change-tripleMatrix.c  generate-matrix-int  generate-matrix-int.c  generate-matrix.sh  run-all.sh
Spark/FFT/transform-operation/spark-fft/src/fft/: fft.scala
Spark/Grep/: genData-grep.sh  runSpark-grep.sh
Spark/MD5/: genData-md5.sh  runSpark-md5.sh
Spark/MD5/md5/maven-archiver/: pom.properties
Spark/MatrixMult/: runSpark-matMult.sh
Spark/MatrixMult/matrix-operation/: pom.xml
Spark/Sort/: .ge.sh  genData-sort.sh  runSpark-sort.sh
Spark/randSample/: genData-randSample.sh  runSpark-randSample.sh
Spark/randSample/RandSample-spark/: pom.xml
Spark/wordcount/: .ge.sh  genData-wc.sh  runSpark-wordcount.sh
(+8 files in other folders)
